# cargo-rebuild-check

./: Cargo.toml  README.md
src/: check_external_cmds.rs  cli.rs  core.rs  errors.rs  main.rs  parse.rs  test_helpers.rs
