[package]
name = "cargo-rebuild-check"
version = "0.1.0"
authors = ["Matthias Krüger <matthias.krueger@famsik.de>"]

[dependencies]
# https://github.com/rust/cargo
cargo = "0.25" # get CARGO_HOME
rayon = "1.0" # parallelize
clap = "2.31" # CLI parsing

[profile.release]
codegen-units = 1
lto = true
