[package]
name = "cargo-rebuild-check"
version = "0.1.0"
authors = ["Matthias Krüger <matthias.krueger@famsik.de>"]

[dependencies]
# https://github.com/rust/cargo
cargo = "0.26" # get CARGO_HOME
rayon = "1.0" # parallelize
clap = "2.31" # CLI parsing

[dev-dependencies]
bencher = "0.1.5" # benchmarks

[profile.release]
codegen-units = 1
lto = true

[profile.bench]
codegen-units = 1
lto = true
debug = false
debug-assertions = false
